--- a/complete/stepx/css/main.css
+++ b/complete/stepx/css/main.css
@@ -15,3 +15,11 @@
 .incoming h2 {
     margin: 0 0 0.3em 0;
 }
+
+.photo {
+	display: inline-block; 
+	margin: 1em; 
+	width: 200px; 
+	height: 150px; 
+	border: 1px solid #ccc;
+}
